force-app/main/default/objects/aos_One_Drive_File_Permission__c/aos_One_Drive_File_Permission__c.object-meta.xml
<CustomObject>
    <label>One Drive File Permission</label>
    <nameField>
        <label>One Drive File Permission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>One Drive File Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>