force-app/main/default/objects/aos_One_Drive_File_Permission__c/fields/aos_Available_Profiles__c.field-meta.xml
<CustomField>
    <fullName>aos_Available_Profiles__c</fullName>
    <label>Available Profiles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analytics Cloud Integration User</fullName>
            </value>
            <value>
                <fullName>Analytics Cloud Security User</fullName>
            </value>
            <value>
                <fullName>Animal Attendant - BARC</fullName>
            </value>
            <value>
                <fullName>Animal Attendant - BARC_OLD</fullName>
            </value>
            <value>
                <fullName>Animal Attendant - Blue Mountains</fullName>
            </value>
            <value>
                <fullName>Animal Attendant - Broken Hill</fullName>
            </value>
            <value>
                <fullName>Animal Attendant - Central West</fullName>
            </value>
            <value>
                <fullName>Animal Attendant - Coffs Harbour</fullName>
            </value>
            <value>
                <fullName>Animal Attendant - Hunter</fullName>
            </value>
            <value>
                <fullName>Animal Attendant - Illawarra</fullName>
            </value>
            <value>
                <fullName>Animal Attendant - Sydney</fullName>
            </value>
            <value>
                <fullName>Animal Attendant - Tuggerah</fullName>
            </value>
            <value>
                <fullName>API Integration</fullName>
            </value>
            <value>
                <fullName>API Integration - Animalis Only</fullName>
            </value>
            <value>
                <fullName>Assistance Hub Portal Profile</fullName>
            </value>
            <value>
                <fullName>Branches User</fullName>
            </value>
            <value>
                <fullName>Case Management User</fullName>
            </value>
            <value>
                <fullName>Case Management User 2</fullName>
            </value>
            <value>
                <fullName>CaseOneDrive Profile</fullName>
            </value>
            <value>
                <fullName>Chatter External User</fullName>
            </value>
            <value>
                <fullName>Chatter Free User</fullName>
            </value>
            <value>
                <fullName>Chatter Moderator User</fullName>
            </value>
            <value>
                <fullName>Contact Centre</fullName>
            </value>
            <value>
                <fullName>Contact Centre + Philanthropy</fullName>
            </value>
            <value>
                <fullName>Contact Centre Managers</fullName>
            </value>
            <value>
                <fullName>Contact Centre v2</fullName>
            </value>
            <value>
                <fullName>Contract Manager</fullName>
            </value>
            <value>
                <fullName>Customer Community Login User</fullName>
            </value>
            <value>
                <fullName>Customer Community User</fullName>
            </value>
            <value>
                <fullName>Donate Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>