force-app/main/default/objects/aos_One_Drive_File_Permission__c/fields/aos_Available_Profiles_Text__c.field-meta.xml
<CustomField>
    <fullName>aos_Available_Profiles_Text__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Available Profiles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>