force-app/main/default/objects/aos_One_Drive_File_Permission__c/fields/aos_One_Drive_File_Id__c.field-meta.xml
<CustomField>
    <fullName>aos_One_Drive_File_Id__c</fullName>
    <label>One Drive File Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>